# CSLP

./: .gitignore  CLI.cpp  CMakeLists.txt  Dgtdvc  ImageManipulator.cpp  ImageManipulator.h  README.md  Report  Report.md  run.py
docs/html/: BitStreamRead_8h_source.html  BitStreamWrite_8h_source.html  BitStream_8h_source.html  BlockDecoding_8h_source.html  BlockEncoding_8h_source.html  BlurGaussian_8h_source.html  Blur_8h_source.html  Channels_8h_source.html  ColorSpace_8h_source.html  Colors_8h_source.html  Decoder_8h_source.html  Effect_8h_source.html  Encoder_8h_source.html  Filter_8h_source.html  Frame_8h_source.html  GolombCode_8h_source.html  Grayscale_8h_source.html  Histogram_8h_source.html  ImageManipulator_8h_source.html  Threshold_8h_source.html  VideoManipulator_8h_source.html  WatermarkImage_8h_source.html  WatermarkText_8h_source.html  Y4MReader_8h_source.html  Y4MWriter_8h_source.html  annotated.html  classBitStream-members.html  classBitStream.html  classBitStreamRead-members.html  classBitStreamRead.html  classBitStreamWrite-members.html  classBitStreamWrite.html  classBlockDecoding-members.html  classBlockDecoding.html  classBlockDecoding__coll__graph.map  classBlockDecoding__coll__graph.md5  classBlockEncoding-members.html  classBlockEncoding.html  classBlur-members.html  classBlur.html  (+125 more)
docs/latex/: BitStreamRead_8h_source.tex  BitStreamWrite_8h_source.tex  BitStream_8h_source.tex  BlockDecoding_8h_source.tex  BlockEncoding_8h_source.tex  BlurGaussian_8h_source.tex  Blur_8h_source.tex  Channels_8h_source.tex  ColorSpace_8h_source.tex  Colors_8h_source.tex  Decoder_8h_source.tex  Effect_8h_source.tex  Encoder_8h_source.tex  Filter_8h_source.tex  Frame_8h_source.tex  GolombCode_8h_source.tex  Grayscale_8h_source.tex  Histogram_8h_source.tex  ImageManipulator_8h_source.tex  Threshold_8h_source.tex  VideoManipulator_8h_source.tex  WatermarkImage_8h_source.tex  WatermarkText_8h_source.tex  Y4MReader_8h_source.tex  Y4MWriter_8h_source.tex  annotated.tex  classBitStream.tex  (+48 more)
scripts/: graficos_CSLP.m  tester.py
src/: BitStreamRead.cpp  BitStreamRead.h  BitStreamWrite.cpp  BitStreamWrite.h  BlockDecoding.cpp  BlockDecoding.h  BlockEncoding.cpp  BlockEncoding.h  Blur.cpp  Blur.h  BlurGaussian.cpp  BlurGaussian.h  CLI.cpp  Channels.cpp  Channels.h  Codec.cpp  Codec.h  ColorSpace.cpp  ColorSpace.h  Colors.h  Decoder.cpp  Decoder.h  Effect.h  Encoder.cpp  Encoder.h  Filter.cpp  Filter.h  Frame.cpp  Frame.h  GaussianBlur.cpp  GaussianBlur.h  GolombCode.h  Grayscale.cpp  Grayscale.h  Histogram.cpp  Histogram.h  ImageManipulator.cpp  ImageManipulator.h  Threshold.cpp  Threshold.h  (+12 more)
tests/: BitStream_Tests.cpp  ColorSpaceTest.cpp  golombtest.cpp  mainTest.cpp
(+88 files in other folders)
